--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div style="clear:both"></div>
     </section>
     <footer>
-      <p>&copy; VIMMERBY GYMNASIUM, DROTTNINGGATAN 25, 59837 VIMMERBY</p>
+      <p>&copy;&nbsp;VIMMERBY GYMNASIUM, DROTTNINGGATAN 25, 59837 VIMMERBY</p>
     </footer>
 
 
