--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
     <figure id="pic_right">
       <img src="bike3_1600_746.jpg" alt="#">
     </figure>
+    <figure id="pic_right">
+      <img src="bike4_1600_746.jpg" alt="#">
+    </figure>
+  
 
       <div style="clear:both"></div>
     </section>
