--- a/index.html
+++ b/index.html
@@ -65,16 +65,16 @@
           </p>
       </article>
       <div style="clear:both"></div>
-    <figure id="pic_left">
+    <figure id="pic_one">
       <img src="bike1_1600_746.jpg" alt="#">
     </figure>
-    <figure id="pic_center">
+    <figure id="pic_two">
       <img src="bike2_1600_746.jpg" alt="#">
     </figure>
-    <figure id="pic_right">
+    <figure id="pic_three">
       <img src="bike3_1600_746.jpg" alt="#">
     </figure>
-    <figure id="pic_right">
+    <figure id="pic_four">
       <img src="bike4_1600_746.jpg" alt="#">
     </figure>
 
