--- a/index.html
+++ b/index.html
@@ -1,90 +1,65 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="sv" dir="ltr">
   <head>
-    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="responsiv.css" type="text/css">
+    <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="responsive.css" type="text/css">
   </head>
   <body>
-    <video autoplay  loop muted width="100%">
-      <source src="Feeling-the-Air.mp4" type="video/mp4">
-    </video>
-
-    <nav>
-      <ul>
-        <li><a href="#">x-monster</a></li>
-        <li><a href="#">bee ride</a></li>
-        <li><a href="#">slug run</a></li>
-        <li><a href="#">fuel blitz</a></li>
-
-
-      </ul>
-
-    </nav>
-    <section>
-      <article id="text_left">
-          <h1>X-MONSTER</h1>
-        <p>Lorem ipsum pro tation euripidis liberavisse eu, duis brute probatus quo eu. Quot ubique iisque no eum, per soluta tibique contentiones ad. Has hinc repudiandae ea. Ea putent contentiones mel. Vis no solet recusabo aliquando. Illum copiosae menandri et vis, ad illum exerci appareat mea. Vel mundi ullamcorper in, in vim mucius quidam habemus.
-          </p>
-          <p>
-        Mea delenit mentitum at, at pri vocent accusata, nam te clita scripta accumsan. Lorem facete mel id. Nonummy quaestio usu ne, cu atqui eirmod scripta pri. Tamquam quaeque an cum. Et veritus praesent facilisis nec, est omnes malorum feugiat cu, id justo facete concludaturque ius. Est te aliquid ornatus argumentum, placerat principes ad pro, vel in kasd nobis causae.
-          </p>
-          <p>
-        In cum dictas dolores, paulo vituperatoribus te sit. Ex his partem ridens quodsi, accumsan delicata expetenda ea ius. Ad natum ignota tincidunt est, an aliquip singulis torquatos eum. Consul soluta urbanitas et sea, solum utroque id vis.
-          </p>
-          <p>
-        Cu aperiam molestie cum, primis iisque intellegebat vel ut. Mel ea aeque putent gubergren, nulla debitis fabellas cu ius. Nam dicta mundi ridens in, iisque qualisque eam id, option quaeque recteque eu vim. Ullum dicunt aeterno ei eos. Vel cu eros munere scaevola, sit ea ludus aliquid abhorreant, an vel pericula pertinacia.
-          </p>
-      </article>
-      <article id="text_center">
-           <h1>BEE SLUG</h1>
-        <p>Lorem ipsum pro tation euripidis liberavisse eu, duis brute probatus quo eu. Quot ubique iisque no eum, per soluta tibique contentiones ad. Has hinc repudiandae ea. Ea putent contentiones mel. Vis no solet recusabo aliquando. Illum copiosae menandri et vis, ad illum exerci appareat mea. Vel mundi ullamcorper in, in vim mucius quidam habemus.
-          </p>
-          <p>
-        Mea delenit mentitum at, at pri vocent accusata, nam te clita scripta accumsan. Lorem facete mel id. Nonummy quaestio usu ne, cu atqui eirmod scripta pri. Tamquam quaeque an cum. Et veritus praesent facilisis nec, est omnes malorum feugiat cu, id justo facete concludaturque ius. Est te aliquid ornatus argumentum, placerat principes ad pro, vel in kasd nobis causae.
-          </p>
-          <p>
-        In cum dictas dolores, paulo vituperatoribus te sit. Ex his partem ridens quodsi, accumsan delicata expetenda ea ius. Ad natum ignota tincidunt est, an aliquip singulis torquatos eum. Consul soluta urbanitas et sea, solum utroque id vis.
-          </p>
-          <p>S
-        Cu aperiam molestie cum, primis iisque intellegebat vel ut. Mel ea aeque putent gubergren, nulla debitis fabellas cu ius. Nam dicta mundi ridens in, iisque qualisque eam id, option quaeque recteque eu vim. Ullum dicunt aeterno ei eos. Vel cu eros munere scaevola, sit ea ludus aliquid abhorreant, an vel pericula pertinacia.
-          </p>
-      </article>
-      <article id="text_right">
-           <h1>SLUG RUN</h1>
-        <p>Lorem ipsum pro tation euripidis liberavisse eu, duis brute probatus quo eu. Quot ubique iisque no eum, per soluta tibique contentiones ad. Has hinc repudiandae ea. Ea putent contentiones mel. Vis no solet recusabo aliquando. Illum copiosae menandri et vis, ad illum exerci appareat mea. Vel mundi ullamcorper in, in vim mucius quidam habemus.
-          </p>
-          <p>
-        Mea delenit mentitum at, at pri vocent accusata, nam te clita scripta accumsan. Lorem facete mel id. Nonummy quaestio usu ne, cu atqui eirmod scripta pri. Tamquam quaeque an cum. Et veritus praesent facilisis nec, est omnes malorum feugiat cu, id justo facete concludaturque ius. Est te aliquid ornatus argumentum, placerat principes ad pro, vel in kasd nobis causae.
-          </p>
-          <p>
-        In cum dictas dolores, paulo vituperatoribus te sit. Ex his partem ridens quodsi, accumsan delicata expetenda ea ius. Ad natum ignota tincidunt est, an aliquip singulis torquatos eum. Consul soluta urbanitas et sea, solum utroque id vis.
-          </p>
-          <p>
-        Cu aperiam molestie cum, primis iisque intellegebat vel ut. Mel ea aeque putent gubergren, nulla debitis fabellas cu ius. Nam dicta mundi ridens in, iisque qualisque eam id, option quaeque recteque eu vim. Ullum dicunt aeterno ei eos. Vel cu eros munere scaevola, sit ea ludus aliquid abhorreant, an vel pericula pertinacia.
-          </p>
-      </article>
-      <div style="clear:both"></div>
-    <figure id="pic_one">
-      <img src="bike1_1600_746.jpg" alt="#">
-    </figure>
-    <figure id="pic_two">
-      <img src="bike2_1600_746.jpg" alt="#">
-    </figure>
-    <figure id="pic_three">
-      <img src="bike3_1600_746.jpg" alt="#">
-    </figure>
-    <figure id="pic_four">
-      <img src="bike4_1600_746.jpg" alt="#">
-    </figure>
-
+    <header>
+      <h1>Lifeleck</h1>
+      <div id="hamburger">
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar bottom"></div>
+      </div>
 
       <div style="clear:both"></div>
-    </section>
-    <footer>
-      <p>&copy;&nbsp;VIMMERBY GYMNASIUM, DROTTNINGGATAN 25, 59837 VIMMERBY</p>
-    </footer>
+    </header>
 
+      <figure id="first">
+        <img src="bilder/banner_blog_1.png" alt="#">
+      </figure>
+      <section>
+        <article>
+          <h2>Fashion / Lifestyle</h2>
+          <h1>All said replenish years</h1>
+          <h1>void kind say void</h1>
+          <h6>Posted on April 15, 2019</h6>
+        </article>
+        <figure id="second">
+          <img src="bilder/banner_blog_2.png" alt="#">
+        </figure>
+        <article>
+          <h2>Fashion / Lifestyle</h2>
+          <h1>All said replenish years</h1>
+          <h1>void kind say void</h1>
+          <h6>Posted on April 15, 2019</h6>
+        </article>
+        <figure id="third">
+          <img src="bilder/banner_blog_3.png" alt="#">
+        </figure>
+        <article>
+          <h2>Fashion / Lifestyle</h2>
+          <h1>All said replenish years</h1>
+          <h1>void kind say void</h1>
+          <h6>Posted on April 15, 2019</h6>
+        </article>
+        <article id="subscription">
+          <h1>Subscribe To</h1>
+          <h1>Our Newsletter</h1>
+          <div id="name">
+            <h6>Your name</h6>
+          </div>
+          <div id="email">
+            <h6>Your email</h6>
+          </div>
+          <div id="subscribe">
+            <h6>Your email</h6>
+          </div>
+        </article>
+
+      </section>
 
   </body>
 </html>
