--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <h6>Your email</h6>
           </div>
           <div id="subscribe">
-            <h6>Your email</h6>
+            <h2>Subscribe</h2>
           </div>
         </article>
 
